--- a/app/src/main/res/layout/activity_order_history_details.xml
+++ b/app/src/main/res/layout/activity_order_history_details.xml
@@ -9,10 +9,10 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/_5sdp">
 
-        <ImageView
-            android:id="@+id/backArrowIV"
+        <ImageButton
+            android:id="@+id/backArrowIB"
             android:layout_width="54dp"
-            android:layout_height="45dp"
+            android:layout_height="55dp"
             android:paddingLeft="@dimen/_5sdp"
             android:paddingRight="@dimen/_5sdp"
             android:src="@drawable/ic_arrow_back" />
@@ -21,25 +21,18 @@
             android:id="@+id/orderNumTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/backArrowIV"
+            android:layout_toRightOf="@+id/backArrowIB"
             android:text="ORDER #943615472034"
             android:textColor="#000"
             android:textSize="@dimen/_15sdp" />
 
-        <TextView
-            android:id="@+id/statusTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/orderNumTV"
-            android:layout_toRightOf="@+id/backArrowIV"
-            android:text="Delivered  | " />
 
         <TextView
             android:id="@+id/itemNumTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/orderNumTV"
-            android:layout_toRightOf="@+id/statusTV"
+            android:layout_toRightOf="@id/backArrowIB"
             android:text="3 items" />
 
         <TextView
@@ -51,11 +44,31 @@
             android:paddingLeft="@dimen/_5sdp"
             android:text="₹250" />
 
+        <TextView
+            android:id="@+id/lastUpdatedTimeTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/statusTV"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:text="Last updated on" />
+
+        <TextView
+            android:id="@+id/statusTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:text="Delivered"
+            android:textSize="@dimen/_12ssp"
+            android:textStyle="bold" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/_4sdp"
             android:layout_below="@+id/itemCostTV"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="-1dp"
             android:layout_marginBottom="-2dp"
             android:background="#4A4848" />
@@ -125,34 +138,13 @@
         </RelativeLayout>
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/deliveryStatusRV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/deliveryRV">
-
-        <ImageView
-            android:id="@+id/checkIV"
-            android:layout_width="@dimen/_40sdp"
-            android:layout_height="@dimen/_40sdp"
-            android:src="@drawable/ic_check" />
-
-        <TextView
-            android:id="@+id/delDateTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/checkIV"
-            android:text="Order Delivered on March 4 5:30 PM" />
-
-    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/bilDetailsRV"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
-        android:layout_below="@+id/deliveryStatusRV"
+        android:layout_below="@+id/deliveryRV"
+        android:layout_marginTop="@dimen/_20sdp"
         android:background="#EFEFEF">
 
         <TextView
@@ -163,106 +155,118 @@
             android:text="BILL DETAILS" />
     </RelativeLayout>
 
-    <ListView
-        android:id="@+id/itemsLV"
+    <LinearLayout
+        android:id="@+id/listViewLL"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_150sdp"
-        android:layout_below="@+id/bilDetailsRV">
+        android:layout_height="@dimen/_350sdp"
+        android:layout_below="@+id/bilDetailsRV"
+        android:orientation="vertical">
 
-    </ListView>
+        <ListView
+            android:id="@+id/itemsLV"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_180sdp" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_5sdp"
-        android:layout_below="@id/itemsLV"
-        android:background="@drawable/dash_line"
-        android:layerType="software" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_5sdp"
+            android:background="@drawable/dash_line"
+            android:layerType="software" />
 
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-
-        android:layout_height="wrap_content">
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/paymentRV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/itemsLV"
-        android:paddingTop="@dimen/_10sdp">
-
-        <TextView
-            android:id="@+id/itemTotalTV"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/paymentRV"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/_5sdp"
-            android:text="Item Total" />
+            android:layout_below="@+id/listViewLL"
+            android:padding="@dimen/_10sdp">
 
-        <TextView
-            android:id="@+id/costTV"
-            android:layout_width="wrap_content"
+
+            <TextView
+                android:id="@+id/itemTotalTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/_5sdp"
+                android:text="Item Total"
+                android:textSize="@dimen/_13ssp" />
+
+            <TextView
+                android:id="@+id/costTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:paddingRight="@dimen/_20sdp"
+                android:text="₹240"
+                android:textSize="@dimen/_13ssp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/itemTotalTV"
+                android:paddingLeft="@dimen/_5sdp"
+                android:paddingTop="@dimen/_5sdp"
+                android:text="Delivery Charges"
+                android:textSize="@dimen/_13ssp" />
+
+            <TextView
+                android:id="@+id/deliveryCostTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/costTV"
+                android:layout_alignParentRight="true"
+                android:paddingTop="@dimen/_5sdp"
+                android:paddingRight="@dimen/_20sdp"
+                android:text="₹20"
+                android:textSize="@dimen/_13ssp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/paidViaRV"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:paddingRight="@dimen/_20sdp"
-            android:text="₹240" />
+            android:layout_above="@id/reOrderBt"
+            android:layout_below="@+id/paymentRV"
+            android:layout_marginBottom="@dimen/_20sdp"
+            android:padding="@dimen/_10sdp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/itemTotalTV"
-            android:paddingLeft="@dimen/_5sdp"
-            android:paddingTop="@dimen/_5sdp"
-            android:text="Delivery Charges" />
+            <TextView
+                android:id="@+id/viaTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_5sdp"
+                android:text="Paid Via Credit/Debt card"
+                android:textColor="#000000"
+                android:textSize="@dimen/_13ssp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/deliveryCostTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/costTV"
-            android:layout_alignParentRight="true"
-            android:paddingTop="@dimen/_5sdp"
-            android:paddingRight="@dimen/_20sdp"
-            android:text="₹20" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/totalCostTV"
+                android:paddingTop="@dimen/_5sdp"
+                android:paddingRight="@dimen/_10sdp"
+                android:text="Total"
+                android:textColor="#000"
+                android:textSize="@dimen/_13ssp"
+                android:textStyle="bold" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/totalCostTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:paddingTop="@dimen/_5sdp"
+                android:paddingRight="@dimen/_20sdp"
+                android:text="₹250"
+                android:textColor="#000"
+                android:textSize="@dimen/_13ssp"
+                android:textStyle="bold" />
 
-    <RelativeLayout
-        android:id="@+id/paidViaRV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/paymentRV">
-
-        <TextView
-            android:id="@+id/viaTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/_5sdp"
-            android:text="Paid Via Credit/Debt card" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/totalCostTV"
-            android:paddingTop="@dimen/_5sdp"
-            android:paddingRight="@dimen/_10sdp"
-            android:text="Total"
-            android:textColor="#000" />
-
-        <TextView
-            android:id="@+id/totalCostTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:paddingTop="@dimen/_5sdp"
-            android:paddingRight="@dimen/_20sdp"
-            android:text="₹250"
-            android:textColor="#000" />
-
-    </RelativeLayout>
+        </RelativeLayout>
+    </LinearLayout>
 
     <Button
+        android:id="@+id/reOrderBt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
