--- a/app/src/main/res/layout/order_items.xml
+++ b/app/src/main/res/layout/order_items.xml
@@ -6,9 +6,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center"
         android:orientation="horizontal"
-        android:paddingHorizontal="@dimen/_15sdp"
+        android:paddingHorizontal="@dimen/_5sdp"
         android:paddingVertical="@dimen/_10sdp">
 
         <TextView
