--- a/app/src/main/res/layout/shop_menu_item_list.xml
+++ b/app/src/main/res/layout/shop_menu_item_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/_150sdp"
     android:layout_height="@dimen/_225sdp"
     android:orientation="vertical"
@@ -38,6 +39,7 @@
             android:id="@+id/priceTV"
             android:layout_width="@dimen/_60sdp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:text="₹100"
             android:textSize="@dimen/_11ssp" />
 
@@ -50,6 +52,16 @@
             android:textColor="#FFFFFF"
             android:textSize="@dimen/_12ssp"
             android:textStyle="bold" />
+
+        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
+            android:id="@+id/numberButtonENB"
+            android:layout_width="@dimen/_64sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_centerHorizontal="true"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:backGroundColor="#D21F3C"
+            app:textSize="@dimen/_4ssp" />
 
     </LinearLayout>
 </LinearLayout>
