--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,10 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorSeller">#FF5722</color>
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
+    <color name="orange">#FF7700</color>
 
 
 </resources>
