--- a/app/src/main/res/layout/activity_seller_details.xml
+++ b/app/src/main/res/layout/activity_seller_details.xml
@@ -1,101 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SellerDetailsActivity">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_margin="@dimen/_10sdp"
-    android:id="@+id/delPriceRL"
-    android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_centerVertical="true"
-        android:padding="@dimen/_5sdp"
-        android:text="DeliveryPrice"
-        android:textStyle="bold"
-        android:id="@+id/delPriceTV"
-        android:textColor="#000"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:id="@+id/rupeeTV"
-        android:layout_toRightOf="@id/delPriceTV"
-        android:padding="@dimen/_5sdp"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:text=" ₹ "
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:textColor="#000"
-        android:layout_height="wrap_content"/>
 
-    <EditText
-        android:layout_width="@dimen/_50sdp"
-        android:layout_toRightOf="@id/rupeeTV"
-        android:layout_marginLeft="@dimen/_2sdp"
-        android:id="@+id/priceTV"
-        android:text=" 30"
-        android:layout_height="wrap_content"/>
-
-    <ToggleButton
-        android:id="@+id/editBT"
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_30sdp"
-        android:textOff=" "
-        android:textOn=" "
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:layout_toRightOf="@+id/priceTV"
-        android:background="@drawable/ic_pencil"
-        android:padding="@dimen/_10sdp" />
-</RelativeLayout>
     <RelativeLayout
+        android:id="@+id/delPriceRL"
         android:layout_width="match_parent"
-        android:layout_margin="@dimen/_10sdp"
-        android:layout_below="@+id/delPriceRL"
-        android:id="@+id/delTakenRL"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_10sdp">
 
         <TextView
+            android:id="@+id/delPriceTV"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="Delivery Taken?"
-            android:textStyle="bold"
+            android:padding="@dimen/_5sdp"
+            android:text="DeliveryPrice"
+            android:textColor="#000"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/rupeeTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_toRightOf="@id/delPriceTV"
+            android:padding="@dimen/_5sdp"
+            android:text=" ₹ "
+            android:textColor="#000" />
+
+        <EditText
+            android:id="@+id/priceTV"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_2sdp"
+            android:layout_toRightOf="@id/rupeeTV"
+            android:text=" 30" />
+
+        <ToggleButton
+            android:id="@+id/editBT"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_toRightOf="@+id/priceTV"
+            android:background="@drawable/ic_pencil"
+            android:padding="@dimen/_10sdp"
+            android:textOff=" "
+            android:textOn=" " />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/delTakenRL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/delPriceRL"
+        android:layout_margin="@dimen/_10sdp">
+
+        <TextView
+            android:id="@+id/delTakenTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:padding="@dimen/_5sdp"
 
-            android:id="@+id/delTakenTV"
+            android:text="Delivery Taken?"
             android:textColor="#000"
-            android:layout_height="wrap_content"/>
+            android:textStyle="bold" />
 
         <ToggleButton
             android:id="@+id/delTakenBT"
             android:layout_width="62dp"
-            android:backgroundTint="@color/orange"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/_10sdp"
             android:layout_toRightOf="@id/delTakenTV"
             android:background="#fff"
+            android:backgroundTint="@color/orange"
             android:textOff="N0"
             android:textOn="YES" />
     </RelativeLayout>
+
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_margin="@dimen/_10sdp"
-        android:layout_below="@+id/delTakenRL"
         android:id="@+id/orderTakenRL"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/delTakenRL"
+        android:layout_margin="@dimen/_10sdp">
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="Order Acceptable?"
-            android:textStyle="bold"
             android:id="@+id/orderTakenTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:padding="@dimen/_5sdp"
+            android:text="Order Acceptable?"
             android:textColor="#000"
-            android:layout_height="wrap_content"/>
+            android:textStyle="bold" />
 
         <ToggleButton
             android:id="@+id/orderTakenBT"
@@ -109,119 +113,125 @@
             android:textOn="YES" />
 
     </RelativeLayout>
+
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_margin="@dimen/_10sdp"
         android:id="@+id/mobileRL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/orderTakenRL"
-        android:layout_height="wrap_content">
+        android:layout_margin="@dimen/_10sdp">
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="Mobile Number"
-            android:textStyle="bold"
             android:id="@+id/mobileTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:padding="@dimen/_5sdp"
+            android:text="Mobile Number"
             android:textColor="#000"
-            android:layout_height="wrap_content"/>
+            android:textStyle="bold" />
 
         <EditText
-            android:layout_width="@dimen/_120sdp"
-            android:layout_toRightOf="@id/mobileTV"
-            android:layout_marginLeft="@dimen/_2sdp"
             android:id="@+id/numberTV"
-            android:text="3056847512"
-            android:layout_height="wrap_content"/>
+            android:layout_width="@dimen/_120sdp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_2sdp"
+            android:layout_toRightOf="@id/mobileTV"
+            android:text="3056847512" />
 
         <ToggleButton
             android:id="@+id/mobileBT"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
-            android:textOff=" "
-            android:textOn=" "
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/_10sdp"
             android:layout_toRightOf="@+id/numberTV"
             android:background="@drawable/ic_pencil"
-            android:padding="@dimen/_10sdp" />
+            android:padding="@dimen/_10sdp"
+            android:textOff=" "
+            android:textOn=" " />
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_margin="@dimen/_10sdp"
         android:id="@+id/openTimeRL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/mobileRL"
-        android:layout_height="wrap_content">
+        android:layout_margin="@dimen/_10sdp">
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="Opening Time"
-            android:textStyle="bold"
-            android:padding="@dimen/_5sdp"
             android:id="@+id/openTimeTV"
-            android:textColor="#000"
-            android:layout_height="wrap_content"/>
-        <TextView
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="12:30 PM"
             android:padding="@dimen/_5sdp"
-            android:textStyle="bold"
+            android:text="Opening Time"
+            android:textColor="#000"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/openTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/_10sdp"
             android:layout_toRightOf="@id/openTimeTV"
+            android:padding="@dimen/_5sdp"
+            android:text="12:30 PM"
             android:textColor="#000"
-            android:layout_height="wrap_content"/>
+            android:textStyle="bold" />
 
         <Button
+            android:id="@+id/openBT"
             android:layout_width="@dimen/_90sdp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_10sdp"
             android:layout_toRightOf="@+id/openTV"
             android:background="#fff"
-            android:id="@+id/openBT"
-            android:padding="@dimen/_5sdp"
             android:backgroundTint="@color/orange"
+            android:padding="@dimen/_5sdp"
             android:text="Select Opening Time" />
     </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_margin="@dimen/_10sdp"
-            android:id="@+id/closeTimeRL"
-            android:layout_below="@id/openTimeRL"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="Closing Time"
-                android:textStyle="bold"
-                android:padding="@dimen/_5sdp"
-                android:id="@+id/closeTimeTV"
-                android:textColor="#000"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="12:30 PM"
-                android:padding="@dimen/_5sdp"
-                android:textStyle="bold"
-                android:id="@+id/closeTV"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_toRightOf="@id/closeTimeTV"
-                android:textColor="#000"
-                android:layout_height="wrap_content"/>
+    <RelativeLayout
+        android:id="@+id/closeTimeRL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/openTimeRL"
+        android:layout_margin="@dimen/_10sdp">
 
-            <Button
-                android:id="@+id/closeBT"
-                android:layout_width="@dimen/_90sdp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_toRightOf="@+id/closeTV"
-                android:background="#fff"
-                android:backgroundTint="@color/orange"
-                android:padding="@dimen/_5sdp"
-                android:text="Select Closing Time" />
+        <TextView
+            android:id="@+id/closeTimeTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:padding="@dimen/_5sdp"
+            android:text="Closing Time"
+            android:textColor="#000"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/closeTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_toRightOf="@id/closeTimeTV"
+            android:padding="@dimen/_5sdp"
+            android:text="12:30 PM"
+            android:textColor="#000"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/closeBT"
+            android:layout_width="@dimen/_90sdp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_toRightOf="@+id/closeTV"
+            android:background="#fff"
+            android:backgroundTint="@color/orange"
+            android:padding="@dimen/_5sdp"
+            android:text="Select Closing Time" />
 
     </RelativeLayout>
-    </RelativeLayout>
+</RelativeLayout>
