payment activity api done reorder done todo solve a small bug in search

--- a/app/src/main/res/layout/activity_order_history_item_detail.xml
+++ b/app/src/main/res/layout/activity_order_history_item_detail.xml
@@ -288,7 +288,7 @@
 
 
         <Button
-            android:id="@+id/reOrderBt"
+            android:id="@+id/reOrderBT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
