--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -49,8 +49,10 @@
         <ListView
             android:id="@+id/cartLV"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_300sdp"
-            android:fadeScrollbars="false"></ListView>
+            android:layout_height="@dimen/_200sdp"
+            android:fadeScrollbars="false"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:background="@drawable/myborder"></ListView>
 
         <EditText
             android:id="@+id/cookingInfoET"
@@ -108,6 +110,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/deliveryFeeTV"
                 android:layout_width="@dimen/_200sdp"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_5sdp"
@@ -154,10 +157,51 @@
 
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_60sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:orientation="vertical"
+            android:padding="@dimen/_10sdp">
+
+            <RadioGroup
+                android:id="@+id/orderStatusRG"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:id="@+id/deliveryRB"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Delivery"
+                    android:textSize="@dimen/_15ssp" />
+
+                <RadioButton
+                    android:id="@+id/pickUpRB"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:text="Pick-Up"
+                    android:textSize="@dimen/_15ssp" />
+            </RadioGroup>
+
+            <EditText
+                android:id="@+id/deliveryLocationET"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/myborder"
+                android:hint="Delivery Location"
+                android:maxLines="2"
+                android:padding="@dimen/_5sdp"
+                android:textSize="@dimen/_15ssp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp"
             android:orientation="horizontal"
             android:padding="@dimen/_10sdp">
 
@@ -182,7 +226,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
 
 
 </RelativeLayout>
